# PA01-score-all-parallelization

./: CMakeLists_cpu_log.txt  CMakeLists_gpu.txt  CMakeLists_omp_log.txt  README.md  package.xml
benchmark/: profile_synthetic.cpp
cmake/: CMakeLists_cpu.txt  CMakeLists_gpu.txt
include/cartographer_parallel/: assignment.h  fast_matcher.h
launch/: cartographer_parallel_with_bag.launch
src/: fast_correlative_node.cpp  fast_matcher.cpp  profile_cpu_boost.cpp  profile_score_all_multi.cpp  score_all_CPU_boost1.cpp  score_all_CPU_boost2.cpp  score_all_CPU_boost3.cpp  score_all_baseline.cpp  score_all_boost1_log.cpp  score_all_cpu_log.cpp  score_all_cpu_openmp.cpp  score_all_gpu_basic.cpp  score_all_gpu_final.cpp  score_all_omp_dynamic_log.cpp  score_all_omp_log.cpp  score_all_submit.cpp
